objects/copado__Epic__c.object
<CustomObject>
    <fields>
        <fullName>copado__Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>copado__Application__c</referenceTo>
        <relationshipLabel>Epics</relationshipLabel>
        <relationshipName>Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Cancelled_Reason__c</fullName>
        <label>Cancelled Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>copado__Epic_Details__c</fullName>
        <label>Epic Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Epic_Title__c</fullName>
        <label>Epic Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>copado__Release__c</referenceTo>
        <relationshipLabel>Epics</relationshipLabel>
        <relationshipName>Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Technical_Assumptions__c</fullName>
        <label>Technical Assumptions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
</CustomObject>